force-app/main/default/objects/OncoGlobal_Knowledge__mdt/OncoGlobal_Knowledge__mdt.object-meta.xml
<CustomObject>
    <description>OncoGlobal knowledge base — product info, expense policy, visit tips, hospitals. Queried by KnowledgeSearchAction for language-aware agent responses.</description>
    <label>OncoGlobal Knowledge</label>
    <pluralLabel>OncoGlobal Knowledge</pluralLabel>
</CustomObject>