force-app/main/default/objects/OncoGlobal_Knowledge__mdt/fields/Content_English__c.field-meta.xml
<CustomField>
    <fullName>Content_English__c</fullName>
    <label>Content (English)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>