force-app/main/default/objects/OncoGlobal_Knowledge__mdt/fields/Content_Hinglish__c.field-meta.xml
<CustomField>
    <fullName>Content_Hinglish__c</fullName>
    <label>Content (Hinglish)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>