force-app/main/default/objects/OncoGlobal_Knowledge__mdt/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords (comma-separated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>